# cvde

./: CMakeLists.txt  README.md  environment.yml
cpp/: CMakeLists.txt  density_python.cpp  utils.cpp
cpp/algo/: AbstractDensityEstimator.cpp  AbstractDensityEstimator.h  VoronoiDensityEstimator.cpp  VoronoiDensityEstimator.h  cell_kernels.cpp  cell_kernels.h  kernels.cpp  kernels.h
cpp/test/: density_test.cpp  geometry_test.cpp  temp.cpp
experiments/: distributions.py  estimators.py  integral_convergence.py  kde_comparison.sh  plot_kde_comparison.py  train_estimator.py  vde_vs_cvde.py
experiments/datasets/frog_calls/: frogs_lbls.npy
libs/gpu/: CMakeLists.txt
